# chatnoir-resiliparse

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.html  sync-py-versions.py  vcpkg-configuration.json
.github/workflows/: build-wheels.yml
.vcpkg/ports/lexbor/: portfile.cmake  vcpkg.json
.vcpkg/triplets/: arm64-osx.cmake  x64-osx.cmake
docs/: conf.py  index.rst  requirements.txt
docs/man/: process-guard.rst
fastwarc/: Cargo.toml
fastwarc-py/: pyproject.toml  setup.py
fastwarc-py/fastwarc/: warc.pyx
fastwarc/src/: lib.rs
resiliparse/: MANIFEST.in  build.rs  pyproject.toml  setup.py  test.py
resiliparse-py/: pyproject.toml  setup.py
resiliparse-py/resiliparse/: cli.py
resiliparse-py/resiliparse/extract/: html2text.pyx
resiliparse-py/resiliparse/parse/: html.pyx  lang.pyx
resiliparse-py/resiliparse/parse/_html_rs/: Cargo.toml  coll.rs  lib.rs  node.rs  tree.rs
resiliparse/resiliparse/extract/: html2text.pyx
resiliparse/resiliparse/parse/: __init__.py
resiliparse/src/parse/html/: tree.rs
resiliparse/src/parse/html/dom/: node.rs  traits.rs
simple/: index.html
simple/resiliparse/: index.html
tests/: __init__.py
tests/resiliparse/beam/: test_elasticsearch.py  test_fileio.py  test_textio.py  test_warcio.py  util.py
wheels/: resiliparse-0.17.2-cp311-cp311-macosx_10_9_x86_64.whl  resiliparse-0.17.2-cp311-cp311-macosx_11_0_arm64.whl  resiliparse-0.17.2-cp311-cp311-win_amd64.whl  resiliparse-0.17.2-cp312-cp312-macosx_10_9_x86_64.whl  resiliparse-0.17.2-cp312-cp312-macosx_11_0_arm64.whl  resiliparse-0.17.2-cp312-cp312-win_amd64.whl
