[package]
name = "fastwarc"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
documentation.workspace = true
description = "A high-performance WARC parsing library for Python written in C++/Cython."

[lib]
crate-type = ["lib"]

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
uuid = { version = "1.18.1", features = ["v4"] }
encoding = "0.2.33"
sha1 = "0.11.0-rc.2"
parking_lot = "0.12.5"
